@@ -12,8 +12,9 @@ app = importString('bulletins.commands:BulletinsCmd')
 
 # These entries let the 'bulletin cmd' commands run:
 
-createdb = importString('bulletins.commands:CreateDB')
-purge    = importString('bulletins.commands:PurgeDB')
-
+createdb  = importString('bulletins.commands:CreateDB')
+purge     = importString('bulletins.commands:PurgeDB')
+showusers = importString('bulletins.commands:ShowUsers')
+adduser   = importString('bulletins.commands:AddUser')
 
 
